@@ -1,7 +1,10 @@
 2011-08-02    <jin@localhost.localdomain>
 
+	* list.html: add SELinux configuration
+
 	* test.cgi (Foo#part): add clearpart.
 	(Foo#part): change modify flag from checkbox to select field.
+
 
 2011-08-01    <jin@localhost.localdomain>
 
